<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BluetoothActivity">


    <ImageView
        android:id="@+id/ivBluetooth"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_bluetooth_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <Switch
        android:id="@+id/swBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/status_bt"
        android:textOff="@string/status_bt_off"
        android:textOn="@string/status_bt_on" />

    <Switch
        android:id="@+id/swDiscoverable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/discover_bt"
        android:textOff="@string/discover_bt_off"
        android:textOn="@string/discover_bt_on" />


    <Button
        android:id="@+id/btnFindDevices"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="right"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/list_devices"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/lsDiscoveredDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1" />


</LinearLayout>